--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=jntd8025@gmail.com
-spring.mail.password=ekje xkkq bvzg hfoo
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
